refactor(api,dashboard): sandboxes regions filter
