# libs/api-client-go/api/openapi.yaml
@@ -2016,6 +2016,36 @@ paths:
       summary: Validate SSH access for sandbox
       tags:
         - sandbox
+  /sandbox/regions:
+    get:
+      operationId: getSandboxRegions
+      parameters:
+        - description: Use with JWT to specify the organization ID
+          explode: false
+          in: header
+          name: X-Daytona-Organization-ID
+          required: false
+          schema:
+            type: string
+          style: simple
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/Region'
+                type: array
+          description: List of regions where sandboxes have been created
+      security:
+        - bearer: []
+        - oauth2:
+            - openid
+            - profile
+            - email
+      summary: List all regions where sandboxes have been created
+      tags:
+        - sandbox
   /runners:
     get:
       operationId: listRunners
@@ -8196,6 +8226,17 @@ components:
       required:
         - sandboxId
         - valid
+      type: object
+    Region:
+      example:
+        name: us
+      properties:
+        name:
+          description: Region name
+          example: us
+          type: string
+      required:
+        - name
       type: object
     CreateRunner:
       example:
